@@ -1,8 +1,4 @@
-DIST 2ManDVD-0.8.8.tar.gz 26864266 RMD160 fba45559fb38c672f6247f77256eec8316e9fc23 SHA1 113d1aab3a129d695e5969a89fd78a2c3c1a459d SHA256 779dd3d20e6bbfcb7c395500ff971aa5e569fb8ad36caa7ae215c4853195ee4d
-DIST 2ManDVD-0.9.3.tar.gz 29807471 RMD160 1e5a2a6dd3c035973c666370528bf1d476b0248f SHA1 eed28f5c067b7e266bd9c0f551461895d1168b96 SHA256 14b0dca522500af43c8b2b1f74f74c9af6424baaea2b5f1d5318e31a0ef0a685
-DIST 2ManDVD-0.9.tar.gz 29420956 RMD160 b0c5c33cd69a696bb868d7c0dd1ea9c171a32c56 SHA1 9f99440e31e837430c43a7273e87be23c6f045b4 SHA256 d66bd18a9eb4c732a6500314e79c367825fd1d3bbc24742d6a10e82785b3c7af
-EBUILD 2mandvd-0.8.8.ebuild 1482 RMD160 b7c5937cc2e9fa8f44a747735eb9f976e52e4aad SHA1 7db71541c8787959f43438daa955be88216b3758 SHA256 a82cf0d8ac3da30167f8f05430e71263ccecd5a57cf56f6c1bc0a7763613372f
-EBUILD 2mandvd-0.9.3.ebuild 1485 RMD160 b1a8e40234f8d836525f30c683ca768165cb0abc SHA1 6f77fe319f9e0e2798cf6995f12db13a1a61d2f2 SHA256 0004914d781fad550513973164ab2de893bb2948693196e5cbd59a3ec8c44b58
-EBUILD 2mandvd-0.9.ebuild 1485 RMD160 b1a8e40234f8d836525f30c683ca768165cb0abc SHA1 6f77fe319f9e0e2798cf6995f12db13a1a61d2f2 SHA256 0004914d781fad550513973164ab2de893bb2948693196e5cbd59a3ec8c44b58
-MISC ChangeLog 1871 RMD160 9cc0dec252c64236788054ed135cc4cdd8ee3920 SHA1 3d4f87eef7f66487a4ce1e6c20fb29ea74ef4c8b SHA256 918c2c3e2f7c61213b2edbbb863242615d3d27d2afa1cb64c97798c9f669eeef
+DIST 2ManDVD-0.9.7.tar.gz 30577680 RMD160 bdb2965bd45f82695ea2273e0f936c3403615808 SHA1 748f0a4e5739f8eb508e13553b8063a7a8cb8e05 SHA256 ca4728e0d536a5e0cd7a17404cc2ae03a0e82150ad95c2e01b5a415ed381aa9d
+EBUILD 2mandvd-0.9.7.ebuild 1470 RMD160 4d0cf1b78cb28363408639001107faa9af4283e0 SHA1 823b0705ce1f478fdebf5e151c822a3a025195f6 SHA256 6c3582c9cf3105fcc3d3a49b8c130b8b6a11a5f1bf82d240275290014ea77b21
+MISC ChangeLog 2131 RMD160 f54f856bff5e3ce30c09716796f726cb2a0146f5 SHA1 d80f72efd05eacc1d9e80468af5998b334872dba SHA256 f43863663e33ff3e3d9910632d8a4b5424012812f9a279e0dfd2c2e681a516ad
 MISC metadata.xml 294 RMD160 ac4e1baa0a1839ae0a807a9d4b915134788d6aa1 SHA1 82865de14486cb30dc9ebfe6f1aecc9c86c0075b SHA256 209af586ae032f00659b69da17d4186854660be14b244d31aa0bea2005c2c5ba
